<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WSPA City Bike NY</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_sort_distance">Sort by distance</string>

    <string name="station_status_value_1">In service</string>
    <string name="station_status_value_2">Planned</string>
    <string name="station_status_value_3">Out of service</string>

    <string name="row_station_name">Station name</string>
    <string name="row_station_id">Id</string>
    <string name="row_station_status">Status</string>
    <string name="row_station_last_updated">Last updated</string>
    <string name="row_station_available_bikes">Available bikes</string>
    <string name="row_station_available_docks">Available docks</string>
    <string name="row_station_distance">Distance</string>
    <string name="row_station_show">Show</string>
    <string name="row_station_navigate">Navigate</string>

    <string name="settings_internet_category_title">Internet</string>
    <string name="settings_internet_connection_title">Internet connection</string>
    <string name="settings_internet_connection_summary">Application after running connects to Internet (wi-fi)</string>
    <string name="settings_internet_dialog_title">Internet message</string>
    <string name="settings_internet_dialog_summary">Application does not ask about internet connection</string>
    <string name="settings_location_category_title">Location</string>
    <string name="settings_location_connection_title">Location connection</string>
    <string name="settings_location_connection_summary">Application after running redirects to location settings</string>
    <string name="settings_location_dialog_title">Location message</string>
    <string name="settings_location_dialog_summary">Application does not ask about GPS connection</string>

    <string name="dialog_checkbox_message">Do not ask again</string>
    <string name="dialog_internet_message">Internet connection is not enabled. Connect to internet?</string>
    <string name="dialog_location_message">Location connection is not enabled. Go to Location Settings?</string>
    <string name="dialog_station_info_title">Station info</string>

    <string name="toast_sync_station_success">Stations updated</string>
    <string name="toast_sync_station_failed">Update failure</string>
    <string name="toast_sync_location_success">Location updated successfully</string>
    <string name="toast_sync_location_failed">Unable to determine location</string>
    <string name="toast_sync_inProgress">Please wait... Executing operations</string>

    <!--zachowywac jakos nazewnictwo!-->
    <string name="map_your_localization">Your \nlocation</string>
    <string name="map_nearest_stations">The nearest \nstations</string>
    <string name="map_navigate_to_point">Navigate to \npoint</string>

    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_find_connection">Find connection</string>
    <string name="menu_own_marks">Own marks</string>
    <string name="menu_update">Update</string>
    <string name="menu_station_list">Station list</string>

</resources>
