<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StationListActivity">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="100" app:showAsAction="always"
        android:icon="@android:drawable/stat_notify_sync_noanim"/>
    <item android:id="@+id/action_sort" android:title="@string/action_sort"
        android:orderInCategory="200" app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_sort_by_size">
        <menu>
            <item android:id="@+id/action_sort_name" android:title="@string/action_sort_name"/>
            <item android:id="@+id/action_sort_distance" android:title="@string/action_sort_distance"/>
        </menu>
    </item>

</menu>

