<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_clear"
    android:id="@+id/map_layout">


    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/map_navigate_to_point"
        android:id="@+id/map_navigate_to_point_button"
        android:layout_gravity="center_horizontal|left"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/map_nearest_stations"
        android:id="@+id/map_nearest_stations_button"
        android:layout_gravity="center"
        android:layout_alignBottom="@+id/map_your_localization_button"
        android:layout_toEndOf="@+id/map_your_localization_button"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/map_your_localization"
        android:id="@+id/map_your_localization_button"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/map_navigate_to_point_button" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right|bottom"
        android:src="@drawable/ginger_man"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
