<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rs_label_stationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_station_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rs_value_stationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:autoText="false"
                android:gravity="right" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rs_label_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_station_id"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/rs_value_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/abc_control_padding_material"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rs_label_statusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_station_status"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/rs_value_statusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/abc_control_padding_material"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rs_layout_lastCommunicationTime">

                <TextView
                    android:id="@+id/rs_label_lastCommunicationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/row_station_last_updated"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/rs_value_lastCommunicationTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/abc_control_padding_material"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rs_layout_availableBikes">

        <TextView
            android:id="@+id/rs_label_availableBikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_station_available_bikes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/rs_value_availableBikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rs_layout_availableDocks">

        <TextView
            android:id="@+id/rs_label_availableDocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_station_available_docks"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/rs_value_availableDocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/rs_value_totalDocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rs_value_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/rs_label_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/rs_show"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00ffffff"
            android:drawableStart="@android:drawable/ic_dialog_map"
            android:text="@string/row_station_show"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/rs_navigate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/abc_dropdownitem_text_padding_left"
            android:layout_marginStart="@dimen/abc_dropdownitem_text_padding_left"
            android:background="#00ffffff"
            android:drawableStart="@drawable/abc_ic_search_api_mtrl_alpha"
            android:text="@string/row_station_navigate"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"></LinearLayout>
</LinearLayout>